[gd_scene load_steps=5 format=3 uid="uid://breslrdu4ta07"]

[ext_resource type="Texture2D" uid="uid://d2e2hc2lf5j5k" path="res://Assets/Tiles/Characters/tile_0000.png" id="1_d3h77"]
[ext_resource type="Script" path="res://player.gd" id="1_g00eu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nmb78"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_d3h77")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6ur2"]
size = Vector2(14, 18)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g00eu")
jump_power = 90

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nmb78")
animation = &"idle"
flip_h = true

[node name="player_hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_r6ur2")

[node name="player_camera" type="Camera2D" parent="."]
position_smoothing_speed = 1.0

[node name="HealthLabel" type="Label" parent="."]
offset_left = -152.0
offset_top = -90.0
offset_right = -57.0
offset_bottom = -67.0
theme_override_colors/font_color = Color(0.989789, 0, 0.26915, 1)
theme_override_colors/font_shadow_color = Color(0.329158, 0.329158, 0.329158, 1)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -155.0
offset_top = -89.0
offset_right = -58.0
offset_bottom = -69.0
max_value = 5.0
step = 1.0
show_percentage = false

[node name="collision_detector" type="Area2D" parent="."]

[node name="player_hitbox" type="CollisionShape2D" parent="collision_detector"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_r6ur2")

[connection signal="area_entered" from="collision_detector" to="." method="_on_collision_detector_area_entered"]
